gke/gke-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: thetechprepper-com-ip-address
    networking.gke.io/managed-certificates: gke-certificate-1,gke-certificate-2
spec:
  rules:
  - host: uat.thetechprepper.com
    http:
      paths:
      - backend:
          serviceName: apache-live-uat-r1-peregrine
          servicePort: 80
  - host: stage-uat.thetechprepper.com
    http:
      paths:
      - backend:
          serviceName: apache-stage-uat-r1-peregrine
          servicePort: 80
